--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    background-color: #ffffff;
+}
+
+@layer components {
+    .flex-center {
+        @apply flex items-center justify-center;
+    }
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
+input::-webkit-inner-spin-button,
+input::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+}
